--- a/public/index.html
+++ b/public/index.html
@@ -6,107 +6,111 @@
     <title>AI Coding Sensei</title>
     <link rel="stylesheet" href="/styles.css" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.34.0/min/vs/loader.min.js"></script>
   </head>
   <body>
     <div class="app-container">
-      <aside class="sidebar">
-        <header class="sidebar-header">
-          <h1>AI Coding Sensei</h1>
-        </header>
-        <nav class="sidebar-nav">
-          <button id="aiHelp" class="sidebar-btn">AI Help</button>
-          <button id="come-and-code" class="sidebar-btn">Come and Code</button>
-        </nav>
-        <section class="panel chat-panel">
-          <h2>Chat</h2>
-          <label for="chat-input" class="visually-hidden">Ask a question</label>
-          <textarea id="chat-input" placeholder="Ask me anything..."></textarea>
-          <button id="chat-submit" class="action-btn">Send</button>
-          <div id="chat-output" class="output-scroll"></div>
-        </section>
-        <section class="panel snippets-panel">
-          <h2>Smart Snippets</h2>
-          <button id="fetch-snippet" class="action-btn">Get Snippet</button>
-          <ul id="snippet-list" class="list-scroll"></ul>
-        </section>
-        <section class="panel timeline-panel">
-          <h2>Code Timeline</h2>
-          <ul id="timeline-list" class="list-scroll"></ul>
-        </section>
-      </aside>
-      <main class="main-content">
-        <section class="prompt-section">
-          <label for="prompt" class="visually-hidden"
-            >Enter your coding prompt</label
-          >
-          <textarea
-            id="prompt"
-            placeholder="e.g., Create a React website"
-          ></textarea>
-          <button id="submitPrompt" class="action-btn">Submit</button>
-          <button id="voiceInput" class="action-btn">🎤 Voice Input</button>
-          <button id="screenShare" class="action-btn">🖥️ Share Screen</button>
-        </section>
-        <section class="editors-section">
-          <div id="user-editor" class="editor"></div>
-          <div id="ai-editor" class="editor"></div>
-        </section>
-        <section class="controls-section">
-          <select id="language-select" onchange="changeLanguage()">
-            <option value="">Change Language</option>
-          </select>
-          <button id="apply-correction" class="action-btn">
-            Apply Auto-Correction
-          </button>
-          <button id="toggle-mood" class="action-btn">
-            Toggle Mood Enhancer
-          </button>
-          <button id="time-machine" class="action-btn">
-            Code Time Machine
-          </button>
-          <select id="duet-style" onchange="startDuet()">
-            <option value="">AI Duet Style</option>
-            <option value="verbose">Verbose</option>
-          </select>
-          <button id="preview-code" class="action-btn">
-            Preview in New Tab
-          </button>
-        </section>
-        <section class="preview-section">
-          <iframe id="preview-frame"></iframe>
-          <video
-            id="screen-preview"
-            autoplay
-            muted
-            style="display: none"
-          ></video>
-        </section>
-        <div id="error-display" class="error-message"></div>
-        <div id="sensei" class="sensei-bubble">
-          👩‍💻 Sensei says: Start coding!
-        </div>
-        <audio id="mood-audio" loop></audio>
-      </main>
-    </div>
-    <div id="collab-modal" class="modal">
-      <div class="modal-content">
-        <span id="close-modal" class="modal-close">×</span>
-        <h2>Come and Code</h2>
-        <button id="start-collab" class="action-btn">Start Session</button>
-        <label for="session-id" class="visually-hidden">Enter Session ID</label>
-        <input
-          id="session-id"
-          placeholder="Enter Session ID"
-          class="modal-input"
-        />
-        <button id="join-collab" class="action-btn">Join Session</button>
-        <div id="session-info" class="session-info"></div>
+      <div class="editor-view">
+        <aside class="sidebar">
+          <header class="sidebar-header">
+            <h1>AI Coding Sensei</h1>
+          </header>
+          <nav class="sidebar-nav">
+            <button id="aiHelp" class="sidebar-btn">AI Help</button>
+            <button id="come-and-code" class="sidebar-btn">
+              Come and Code
+            </button>
+            <button id="history-btn" class="sidebar-btn">History</button>
+          </nav>
+          <section class="panel feedback-panel">
+            <h2>Feedback</h2>
+            <button id="feedback-good" class="action-btn">👍 Good</button>
+            <button id="feedback-bad" class="action-btn">👎 Bad</button>
+          </section>
+        </aside>
+        <main class="main-content editor-mode">
+          <section class="editors-section">
+            <div class="terminal-container user-terminal">
+              <h3>User Terminal</h3>
+              <div id="user-editor" class="editor"></div>
+            </div>
+            <div class="terminal-container response-terminal">
+              <h3>Response Terminal</h3>
+              <div class="ai-editor-container">
+                <div id="ai-editor" class="editor"></div>
+                <button id="copy-code" class="action-btn copy-btn">Copy</button>
+              </div>
+            </div>
+          </section>
+          <section class="preview-section" style="display: none">
+            <h3>Preview</h3>
+            <iframe id="preview-frame" class="preview-frame"></iframe>
+          </section>
+          <section class="prompt-section">
+            <label for="prompt" class="visually-hidden"
+              >Enter your coding prompt</label
+            >
+            <textarea
+              id="prompt"
+              placeholder="e.g., Create a React website"
+            ></textarea>
+            <button id="submitPrompt" class="action-btn">Submit</button>
+            <button id="voiceInput" class="icon-btn">
+              <span class="mic-icon">🎤</span>
+            </button>
+            <button id="screenShare" class="icon-btn">
+              <span class="screen-icon">🖥️</span>
+            </button>
+            <button id="previewBtn" class="action-btn">Preview</button>
+            <select id="feature-select" onchange="updateFeatureOptions()">
+              <option value="">Select Feature</option>
+              <option value="language">Change Language</option>
+              <option value="duet">AI Duet Style</option>
+              <option value="correction">Auto-Correction</option>
+              <option value="mood">Mood Enhancer</option>
+              <option value="time">Code Time Machine</option>
+            </select>
+            <select
+              id="sub-feature-select"
+              onchange="executeFeature()"
+              style="display: none"
+            >
+              <option value="">Select Option</option>
+            </select>
+          </section>
+          <div id="error-display" class="error-message"></div>
+        </main>
       </div>
+      <div id="history-modal" class="modal">
+        <div class="modal-content">
+          <span id="close-history" class="modal-close">×</span>
+          <h2>History</h2>
+          <ul id="history-list"></ul>
+        </div>
+      </div>
+      <div id="collab-modal" class="modal">
+        <div class="modal-content">
+          <span id="close-collab-modal" class="modal-close">×</span>
+          <h2>Come and Code</h2>
+          <button id="start-collab" class="action-btn">Start Session</button>
+          <label for="session-id" class="visually-hidden"
+            >Enter Session ID</label
+          >
+          <input
+            id="session-id"
+            placeholder="Enter Session ID"
+            class="modal-input"
+          />
+          <button id="join-collab" class="action-btn">Join Session</button>
+          <div id="session-info" class="session-info"></div>
+        </div>
+      </div>
+      <div id="sensei" class="sensei-bubble">👩‍💻 Sensei says: Welcome!</div>
     </div>
+    <audio id="mood-audio" loop></audio>
     <script src="/client.js"></script>
   </body>
 </html>
